[Add] add global css

--- a/rush/main.css
+++ b/rush/main.css
@@ -1,9 +1,4 @@
-/* ------------------------- Global ---------------------------- */
-* {
-    font-family: "Kanit", serif;
-    box-sizing: border-box;
-}
-
+/* ------------------------- body ---------------------------- */
 body {
     margin: 0;
     display: flex;
