--- a/rush/ylimwila/style.css
+++ b/rush/ylimwila/style.css
@@ -4,8 +4,13 @@
     left: 0;
     width: 150px;
     height: 100%;
-    background: #333;
+    background: white;
+    border-inline-end: 1px solid;
     padding-top: 50px;
     z-index: 999;
     transition: width 0.5s;
+    -webkit-transition: width 0.5s;
+    -moz-transition: width 0.5s;
+    -ms-transition: width 0.5s;
+    -o-transition: width 0.5s;
 }
