--- a/rush/ylimwila/style.css
+++ b/rush/ylimwila/style.css
@@ -19,6 +19,7 @@
     font-style: normal;
     font-weight: 500;
 }
+
 /* -----------------------------------------------Global----------------------------------------------- */
 * {
     font-family: 'Pixeloid', sans-serif;
@@ -27,6 +28,7 @@
 body {
     margin: 0;
 }
+
 /* -----------------------------------------------Nav----------------------------------------------- */
 nav {
     display: flex;
@@ -38,20 +40,20 @@ nav {
     top: 0;
     width: 100%;
     z-index: 1000;
+
+    a {
+        color: white;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        padding: 10px;
+    }
 }
 
 .nav-links {
     display: flex;
     gap: 15px;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding: 10px;
 }
 
 .active-nav::before {
@@ -68,12 +70,13 @@ nav a {
     color: white;
     cursor: pointer;
 }
+
 /* -----------------------------------------------section & footer----------------------------------------------- */
 section {
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     padding: 100px 0px;
     display: flex;
-    justify-content: center;
 }
 
 footer {
@@ -83,39 +86,103 @@ footer {
     padding: 20px;
     height: 50vh;
 }
+
 /* -----------------------------------------------About----------------------------------------------- */
 #about {
     padding-top: 64px;
     display: grid;
     grid-template-columns: 50% 50%;
     align-items: center;
+    justify-content: center;
     gap: 16px;
     width: 100%;
     background-color: coral;
+
+    .img-container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .img-border {
+            width: 300px
+        }
+    }
+
+    .img {
+        width: 100%;
+
+        img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+    }
 }
 
-#about>.img-container {
-    width: 100%;
+/* -----------------------------------------------Skills----------------------------------------------- */
+#skills {
+    text-align: center;
+    justify-content: center;
     display: flex;
+    flex-direction: column;
+    gap: 16px;
+    min-height: 100vh;
+    height: auto;
+
+
+    .content {
+        display: grid;
+        grid-template-columns: 70% 30%;
+        gap: 16px;
+        align-items: center;
+    }
+
+    .img {
+        width: 100%;
+
+        img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+
+    }
+
+    .skills-container {
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+        .nes-container>div {
+            display: flex;
+            flex-wrap: wrap;
+            flex: 1;
+            /* flex-direction: column; */
+            text-align: start;
+            gap: 8px;
+        }
+    }
+}
+
+/* -----------------------------------------------Footer----------------------------------------------- */
+footer {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    contact-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+    }
 }
 
-.img-container>.img-border {
-    width: 300px
-}
-
-.img {
-    width: 100%;
-}
-
-.img img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
 /* -----------------------------------------------Responsive----------------------------------------------- */
 @media (max-width: 768px) {
+
     /* -----------------------------------------------Nav----------------------------------------------- */
     nav {
         flex-direction: column;
@@ -128,11 +195,11 @@ footer {
         width: 100%;
         background-color: #212529;
         padding-top: 10px;
-    }
 
-    .nav-links a {
-        padding: 10px;
-        text-align: left;
+        a {
+            padding: 10px;
+            text-align: left;
+        }
     }
 
     .menu-toggle {
@@ -153,11 +220,17 @@ footer {
         display: flex;
         gap: 32px;
         flex-direction: column;
+
+        div-column {
+            align-items: center;
+            text-align: center;
+        }
     }
 
-    #about div-column {
-        align-items: center;
-        text-align: center;
+    #skills {
+        .content {
+            grid-template-columns: 100%;
+        }
     }
 }
 
