--- a/rush/main.css
+++ b/rush/main.css
@@ -82,15 +82,21 @@ main {
     -moz-border-radius: 16px;
     -ms-border-radius: 16px;
     -o-border-radius: 16px;
-}
 
-.card img {
-    width: 100%;
-    transition: transform 0.3s ease;
-    -webkit-transition: transform 0.3s ease;
-    -moz-transition: transform 0.3s ease;
-    -ms-transition: transform 0.3s ease;
-    -o-transition: transform 0.3s ease;
+    img {
+        width: 100%;
+        transition: transform 0.3s ease;
+        -webkit-transition: transform 0.3s ease;
+        -moz-transition: transform 0.3s ease;
+        -ms-transition: transform 0.3s ease;
+        -o-transition: transform 0.3s ease;
+    }
+
+    .desc {
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .card:hover#oak {
@@ -117,10 +123,4 @@ main {
     -moz-transform: scale(1.05);
     -ms-transform: scale(1.05);
     -o-transform: scale(1.05);
-}
-
-.card .desc {
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
 }
