--- a/rush/tsoontho/style.css
+++ b/rush/tsoontho/style.css
@@ -80,7 +80,7 @@ html {
 /*======= About Section =======*/
 #about {
     height: 100vh;
-    background-image: linear-gradient(#010818, #253b64, #00102a);
+    background-image: linear-gradient(#010818, #253b64);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -197,18 +197,6 @@ html {
     border: none;
     background-color: #ffffff;
     overflow: hidden;
-}
-
-.custom-card:nth-child(1) {
-    border-left: 5px solid #007bff;
-}
-
-.custom-card:nth-child(2) {
-    border-left: 5px solid #28a745;
-}
-
-.custom-card:nth-child(3) {
-    border-left: 5px solid #ffc107;
 }
 
 @media (max-width: 768px) {
