--- a/rush/tsoontho/style.css
+++ b/rush/tsoontho/style.css
@@ -28,6 +28,9 @@ html {
     text-decoration: underline;
     transform: scale(1.1);
 }
+.navbar a {
+    text-shadow: 1px 1px 2px rgba(1, 8, 24, 0.5);
+}
 
 /*======= Home Section =======*/
 .home-section {
@@ -35,6 +38,7 @@ html {
     width: 100%;
     height: 100vh;
     background: url('https://wallpapers-clan.com/wp-content/uploads/2023/11/aesthetic-night-ocean-desktop-wallpaper-preview.jpg') no-repeat center center/cover;
+    background-attachment: fixed;
 }
 
 .home-overlay {
@@ -145,7 +149,13 @@ html {
         font-size: 1rem;
     }
 }
-
+.icon-mitsubishi {
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    margin: 0 10px;
+    vertical-align: middle;
+}
 
 /*======= Experience Section =======*/
 #experience {
@@ -156,6 +166,7 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-attachment: fixed;
 }
 
 #experience .card {
