--- a/rush/main.css
+++ b/rush/main.css
@@ -41,7 +41,7 @@ main {
     font-weight: bold;
     font-size: 3rem;
     animation: titleBounce 1.5s infinite;
-    -webkit-animation:;
+    -webkit-animation: titleBounce 1.5s infinite;
 }
 
 @keyframes titleBounce {
